finished most of .yml
