# components/dms2122backend/dms2122backend/openapi/spec.yml
@@ -50,10 +50,208 @@ paths:
         - user_token: []
           api_key: []
   /question/new:
-    # TODO
+    post:
+      summary: Creates a new question.
+      operationId: dms2122backend.presentation.rest.question.create_question
+      requestBody:
+        description: Question's ID.
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/QuestionFullModel'
+      responses:
+        '200':
+          description: Data of the requested question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionFullIdModel'
+        '400':
+          description: Errors in the request.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '403':
+          description: The requesting user has no permission to do this operation.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '409':
+          description: There is a conflict with some of the question's unique data.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+      security:
+        - user_token: []
+          api_key: []
+  /question/{id}:
+    get:
+      summary: Obtains a question given an ID.
+      operationId: dms2122backend.presentation.rest.question.get_question_by_id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: int
+      responses:
+        '200':
+          description: Data of the newly created question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/QuestionFullIdModel'
+        '400':
+          description: Errors in the request.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+      security:
+        - user_token: []
+          api_key: []
+  /question/{id}/answers:
+    get:
+      summary: Gets whether a question has answers.
+      operationId: dms2122backend.presentation.rest.answer.question_has_answers
+      parameters:
+        - name: questionId
+          in: path
+          required: true
+          schema:
+            type: int
+      responses:
+        '200':
+          description: The given question has some answers.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '403':
+          description: The requesting user has no permission to do this operation.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '404':
+          description: The given question does not have any answers, or the question does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+  /question/{id}/answer/{username}:
+    post:
+      summary: Answers a question by a user.
+      operationId: dms2122backend.presentation.rest.answer.answer
+      requestBody:
+        description: Answer data.
+        content:
+          'application/json':
+            schema:
+              $ref: '#/components/schemas/AnswerFullModel'
+      responses:
+        '200':
+          description: The question has been answered.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '400':
+          description: A mandatory parameter was not given.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '403':
+          description: The requestor has no privilege to answer a question.
+          content:
+            'text/plain':
+              schema:
+                type: string
+        '404':
+          description: The given question or user does not exist.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
 
-
-
+  /answers/{id}:
+    get:
+      summary: Gets all answers to a question.
+      operationId: dms2122backend.presentation.rest.answer.list_all_for_question
+      parameters:
+        - name: questionId
+          in: path
+          required: true
+          schema:
+            type: int
+      responses:
+        '200':
+          description: The list of answers for that question.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswersFullListModel'
+        '403':
+          description: The requesting user has no permission to do this operation.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
+  /answers/{username}:
+    get:
+      summary: Gets all answers to a question.
+      operationId: dms2122backend.presentation.rest.answer.list_all_for_user
+      parameters:
+        - name: username
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: The list of answers for that user.
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/AnswersFullListModel'
+        '403':
+          description: The requesting user has no permission to do this operation.
+          content:
+            'text/plain':
+              schema:
+                type: string
+      tags:
+        - questions
+        - answers
+      security:
+        - user_token: []
+          api_key: []
 
 
 components:
@@ -107,10 +305,59 @@ components:
         - correct_answer
         - punctuation
         - penalty
+    QuestionFullIdModel:
+      type: object
+      properties:
+        id:
+          type: int
+        title:
+          type: string
+        body:
+          type: string
+        option1:
+          type: string
+        option2:
+          type: string
+        option3:
+          type: string
+        correct_answer:
+          type: int
+        punctuation:
+          type: float
+        penalty:
+          type: float
+      required:
+        - id
+        - title
+        - body
+        - option1
+        - option2
+        - option3
+        - correct_answer
+        - punctuation
+        - penalty
     QuestionsFullListModel:
       type: array
       items:
         $ref: '#/components/schemas/QuestionFullModel'
+
+    AnswerFullModel:
+      type: object
+      properties:
+        username:
+          type: string
+        number:
+          type: int
+        questionId:
+          type: int
+      required:
+        - username
+        - number
+        - questionId
+    AnswersFullListModel:
+      type: array
+      items:
+        $ref: '#/components/schemas/AnswerFullModel'
 
   securitySchemes:
     api_key:
