# components/dms2122backend/dms2122backend/presentation/rest/question.py
@@ -81,7 +81,7 @@ def get_question(authservice: AuthService, body: Dict, token_info: Dict) -> Tupl
             return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)        
     return (question, HTTPStatus.OK.value)
 
-def get_question_by_id(authservice: AuthService, body: Dict, token_info: Dict) -> Tuple[Union[Optional[Question], str], Optional[int]]:
+def get_question_by_id(id: int, token_info: Dict) -> Tuple[Union[Optional[Question], str], Optional[int]]:
     """Creates a question if the requestor has the Teacher role.
 
     Args:
@@ -96,15 +96,9 @@ def get_question_by_id(authservice: AuthService, body: Dict, token_info: Dict) -
             - 409 CONFLICT if an existing user already has all or part of the unique user's data.
     """
     with current_app.app_context():
-        response: ResponseData = authservice.get_user_has_role(session.get('token'), token_info['user_token']['user'], "Teacher")
-        if response.is_successful() == False:
-            return (
-                'Current user has not enough privileges to create a question',
-                HTTPStatus.FORBIDDEN.value
-            )
         try:
             question = QuestionsServices.get_question_by_id(
-                body['id'], current_app.db
+                id, current_app.db
             )
         except ValueError:
             return ('A mandatory argument is missing', HTTPStatus.BAD_REQUEST.value)        
